# agentmz

./: .aiderignore  .env.example  .env_bak.txt  .gitignore  .mcp.example.json  .mcp.json  @chat.html  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Forge_Plan.md.md  Gemini.md  README.md  README_AGENT.md  agent.sh  agent_alias_install.sh  aicoder_install.sh  alembic.ini  chat.html  chat.html.backup  coding_principles.md  container_manager.py  database.py  director.py  env_utils.py  forge.bat  index.html  install.sh  install_agent.sh  install_aider.sh  install_forge_win.ps1  llm.md  main.py  models.py  pyproject.toml  requirements.txt  run_aider.sh  run_aider_local.sh  session_handoff.md  session_notes.md  (+5 more)
.claude/: settings.local.json  settings.template.json
agent/: CLAUDE.md  __init__.py  aider_runner.py  circuit_breaker.py  constants.py  graph.py  runner.py  tools.py
alembic/: env.py
core/: CLAUDE.md  context.py
docker/: CLAUDE.md  Caddyfile  Dockerfile.aider-api  Dockerfile.main-api  Dockerfile.ollama  Modelfile.qwen-coder-optimized  docker-compose.yml  ollama-init.sh
docs/: CHANGELOG.md  DOCKER_MODEL_RUNNER.md  JOB_QUEUE_SYSTEM.md  OFFLINE_SETUP.md
forge/: __init__.py  __main__.py  app.py  cli.py  config.py  forge  forge.tcss  subagent.py
hooks/: README.md  install.sh  pre-commit
integrations/: CLAUDE.md  __init__.py  encryption.py
prompter/: ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  ARCHITECTURE_V2.md  CODING_PRINCIPLES.md  E2E_ENCRYPTION.md  IMPLEMENTATION_ROADMAP.md  README.md  SECURITY_AND_BEST_PRACTICES.md  SETUP.md
routers/: CLAUDE.md  __init__.py  (+16 more)
(+125 files in other folders)
